<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.example.app.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/nano_degree_app" />

    <Button
        android:id="@+id/popular_movie"
        style="@style/MainBtnStyle"
        android:text="@string/popular_movie" />

    <Button
        android:id="@+id/stock_eagle"
        style="@style/MainBtnStyle"
        android:text="@string/stock_eagle" />

    <Button
        android:id="@+id/xyz_reader"
        style="@style/MainBtnStyle"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/extra_news"
        style="@style/MainBtnStyle"
        android:text="@string/extra_news" />

    <Button
        android:id="@+id/graduation_project"
        style="@style/MainBtnStyle"
        android:text="@string/graduation_project" />
</LinearLayout>
